--- a/src/main/java/cesjf/br/view/BuscarUsuarios.form
+++ b/src/main/java/cesjf/br/view/BuscarUsuarios.form
@@ -39,7 +39,7 @@
                       <Component id="btPesquisar" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="39" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
